--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "~1.14.1",
     "bunyan": "^1.5.1",
+    "elasticsearch": "^10.1.3",
     "express": "~4.13.3",
     "forever": "^0.15.1",
     "shiny-express-errors": "~0.4.2",
