--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "chai": "~3.4.1",
-    "chai-http": "~1.0.0",
+    "chai-http": "shinymayhem/chai-http",
     "mocha": "^2.4.5",
     "node-inspector": "^0.12.5",
     "nodemon": "^1.8.1"
@@ -23,8 +23,8 @@
     "express": "~4.13.3",
     "forever": "^0.15.1",
     "jade": "^1.11.0",
-    "shiny-express-errors": "~0.4.2",
-    "shiny-express-formatter": "~0.3.2",
+    "shiny-express-errors": "~1.1.1",
+    "shiny-express-formatter": "~0.4.0",
     "url-template": "shinymayhem/url-template#leave-missing-params"
   }
 }
