--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,9 @@ build:
     - npm test
   environment:
     - NODE_PORT=3000
+compose:
+  elasticsearch:
+    image: shinydocker/elasticsearch:1.1
 publish:
   docker:
     tag:
