remove authbind from dev-compose command

--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -12,7 +12,7 @@ app:
     - ./:/var/www
     - ../npm/:/npm
   #command: sleep infinity
-  command: authbind --deep npm run dev
+  command: npm run dev
   links:
     - elasticsearch
 elasticsearch:
