--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -7,6 +7,7 @@ app:
     - 8080:8080
   environment:
     NODE_ENV: development
+    NODE_PORT: 3000
     ELASTICSEARCH_URL: http://elasticsearch:9200
   volumes:
     - ./:/var/www
